fix spacing
Issue with top margin

--- a/weather/screen.css
+++ b/weather/screen.css
@@ -82,10 +82,13 @@ nav a:hover,nav a:focus {color: #6c4ddb;}
     padding-left: .15em;}
 
 #city-name {order: 0;
-    font-size: 2em;}
+    font-size: 2em;
+    margin-top: 0;}
 
 article {display:flex;
-    flex-direction: column;}
+    flex-direction: column;
+    margin-top: 1em;
+    margin-bottom: 1em;}
 
 footer {margin-bottom: 3em;
     background-color: #0e89d5;
